--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  “homepage”: "https://adarshal.github.io/ReactAsgn1/",
   "name": "tooltip",
   "private": true,
   "version": "0.0.0",
@@ -8,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
