--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  “homepage”: "https://adarshal.github.io/ReactAsgn1/",
+  "homepage": "https://adarshal.github.io/ReactAsgn1/",
   "name": "tooltip",
   "private": true,
   "version": "0.0.0",
